# AgentEx

./: .gitignore  README.md  pyproject.toml  requrements.txt
agentex/: agent.py  swarm.py
agentex/tests/: test.py
src/agentex/: __init__.py
src/agentex/agents/: agent.py
src/agentex/backends/: __init__.py  local_backend.py  rabbitmq_backend.py
src/agentex/logging/: logger.py
src/agentex/rabbitmq/: __init__.py  message_broker.py
src/agentex/simulations/space_com/: __init__.py  agents.py  iso.py  main.py  space_com.py  tasks.py  terrain.py
src/agentex/swarms/: __init__.py  swarm.py
src/agentex/tasks/: base_task.py  task.py  task_manager.py
src/agentex/tests/: mq_test.py  news_agent.py
