[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentex"
version = "0.1.0"
description = "A multi-agent asynchronous framework for swarm communication and task execution."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "David Williams", email = "deltaflyerguy5@gmail.com" }]
requires-python = ">=3.8"
keywords = ["multi-agent", "swarm", "asynchronous", "framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "aiohttp",
    "exlog",
    "termcolor"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/onedavidwilliams/AgentEx"
Issues = "https://github.com/onedavidwilliams/AgentEx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentex"]
